Fix flickering of data

--- a/web-console/src/dialogs/rollup-estimate-dialog/rollup-estimate-dialog.scss
+++ b/web-console/src/dialogs/rollup-estimate-dialog/rollup-estimate-dialog.scss
@@ -19,6 +19,7 @@
 .rollup-estimate-dialog {
   &.bp3-dialog {
     width: 90%;
+    height: 745px;
     display: grid;
     grid-template-areas:
       'navi navi'
